[package]
name = "dbus-message-parser"
version = "4.3.1"
edition = "2018"
description = "Libary to encode and decode DBus message"
readme = "README.md"
authors = ["LinkTed <link.ted@mailbox.org>"]
license = "BSD-3-Clause"
keywords = ["dbus", "parser"]
include = [
    "src/**/*.rs",
    "tests/*.rs",
    "examples/*.rs",
    "benches/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "NOTICE"
    ]
repository = "https://github.com/LinkTed/dbus-message-parser"
categories = [
    "parser-implementations",
    "encoding"
    ]

[dependencies]
bytes = "~1.7.1"
lazy_static = "~1.5.0"
bitflags = "~2.6.0"
thiserror = "~1.0.26"
cfg-if = "~1.0.0"

[dev-dependencies]
criterion = "~0.5.1"

[[bench]]
name = "message"
harness = false
